--- a/Phase 5/My Images/My Spring boot and MySQL Database Image using Docker Compose/spring-boot-with-mysql-compose/spring-boot-with-mysql-compose/docker-compose.yml
+++ b/Phase 5/My Images/My Spring boot and MySQL Database Image using Docker Compose/spring-boot-with-mysql-compose/spring-boot-with-mysql-compose/docker-compose.yml
@@ -1,22 +1,22 @@
 version: "3.0"
+networks:
+  my-net:
 services:
   spring-demo:
     image: spring-boot-app
     ports:
       - "9292:9090"
     networks:
-      - spring-boot-with-mysql-compose_spring-boot-mysql
+      - my-net
     depends_on:
       - mysqldb
   mysqldb:
     image: mysql:8
     networks:
-      - spring-boot-with-mysql-compose_spring-boot-mysql
+      - my-net
     ports:
       - "3308:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=mydb  
 
-networks:
-  spring-boot-with-mysql-compose_spring-boot-mysql:
